//export PATH="$PATH:$(go env GOPATH)/bin"
/*protoc --go_out=. --go_opt=paths=source_relative \
--go-grpc_out=. --go-grpc_opt=paths=source_relative \
proto/psg_worker.proto*/

syntax = "proto3";

import "google/protobuf/timestamp.proto";

package emailService;
option go_package = ".;emailService";

message Email {
  string email_id = 1;
  repeated string to = 2;
  string from = 3;
  string body = 4;
  string subject = 5;
  string content_type = 6;
  google.protobuf.Timestamp created_at = 7;
}

message SendEmailsRequest {
  repeated string to = 1;
  string subject = 2;
  string body = 3;
}

message SendEmailsResponse {
  string status = 1;
}

message FindEmailByIdRequest {
  string email_uuid = 1;
}

message FindEmailByIdResponse {
  Email email = 1;
}

message FindEmailsByReceiverRequest {
  string receiver_email = 1;
  uint64 page = 2;
  uint64 size = 3;
}

message FindEmailsByReceiverResponse {
  repeated Email emails = 1;
  uint64 total_pages = 2;
  uint64 total_count = 3;
  bool has_more = 4;
  uint64 page = 5;
  uint64 size = 6;
}

service EmailService {
  rpc SendEmails(SendEmailsRequest) returns (SendEmailsResponse);
  rpc FindEmailById(FindEmailByIdRequest) returns (FindEmailByIdResponse);
  rpc FindEmailsByReceiver(FindEmailsByReceiverRequest) returns (FindEmailsByReceiverResponse);
}
